@@ -23,7 +23,7 @@ export DEB_LDFLAGS_MAINT_APPEND = -Wl,--as-needed
 	#dh $@ --with autoreconf
 
 override_dh_auto_configure:
-	dh_auto_configure -- --with-math --with-webdir=/var/lib/netdata/www
+	dh_auto_configure -- --with-math
 
 debian/%.postinst: debian/%.postinst.in
 	sed 's/@DEB_HOST_MULTIARCH@/$(DEB_HOST_MULTIARCH)/g' $< > $@
@@ -34,42 +34,29 @@ override_dh_install: debian/netdata.postinst
 	# Remove unneeded .keep files
 	#
 	find "$(TOP)" -name .keep -exec rm '{}' ';'
+	rm -rf $(CURDIR)/debian/netdata-data/usr/share/netdata/web/old
 
 	# Move files that local user shouldn't be editing to /usr/share/netdata
 	#
-	mkdir -p "$(TOP)/usr/share/netdata"
-	for D in $$(find "$(TOP)/var/lib/netdata/www/" -maxdepth 1 -type d -printf '%f '); do \
-		echo Relocating $$D; \
-		mv "$(TOP)/var/lib/netdata/www/$$D" "$(TOP)/usr/share/netdata/$$D"; \
-		ln -s "/usr/share/netdata/$$D" "$(TOP)/var/lib/netdata/www/$$D"; \
-	done
+	#mkdir -p "$(TOP)/usr/share/netdata"
+	#for D in $$(find "$(TOP)/var/lib/netdata/www/" -maxdepth 1 -type d -printf '%f '); do \
+	#	echo Relocating $$D; \
+	#	mv "$(TOP)/var/lib/netdata/www/$$D" "$(TOP)/usr/share/netdata/$$D"; \
+	#	ln -s "/usr/share/netdata/$$D" "$(TOP)/var/lib/netdata/www/$$D"; \
+	#done
 
 	# Update postinst to set correct group for www files on installation.
 	# Should probably be dpkg-statoverride really, but that gets *really*
 	# messy. We also set all web files in /var as conffiles so an upgrade
 	# doesn't splat them.
 	#
-	for D in $$(find "$(TOP)/var/lib/netdata/www/" -maxdepth 1 -type f -printf '%f '); do \
-		echo Updating postinst for $$D; \
-		sed -i "s/^#PERMS#/chgrp netdata \/var\/lib\/netdata\/www\/$$D\n#PERMS#/g" \
-			$(CURDIR)/debian/netdata.postinst; \
-		echo "/var/lib/netdata/www/$$D" >> $(CURDIR)/debian/netdata.conffiles; \
-	done
-	sed -i "/^#PERMS#/d" $(CURDIR)/debian/netdata.postinst
-
-override_dh_installdocs:
-	dh_installdocs
-
-	# Docs should not be under /usr/lib
-	#
-	mv $(TOP)/usr/lib/$(DEB_HOST_MULTIARCH)/netdata/plugins.d/README.md \
-		$(TOP)/usr/share/doc/netdata/README.plugins.md
-	mv $(TOP)/usr/lib/$(DEB_HOST_MULTIARCH)/netdata/charts.d/README.md \
-		$(TOP)/usr/share/doc/netdata/README.charts.md
-
-	# This doc is currently empty, so no point installing it.
-	#
-	rm $(TOP)/usr/lib/$(DEB_HOST_MULTIARCH)/netdata/node.d/README.md
+	#for D in $$(find "$(TOP)/var/lib/netdata/www/" -maxdepth 1 -type f -printf '%f '); do \
+	#	echo Updating postinst for $$D; \
+	#	sed -i "s/^#PERMS#/chgrp netdata \/var\/lib\/netdata\/www\/$$D\n#PERMS#/g" \
+	#		$(CURDIR)/debian/netdata.postinst; \
+	#	echo "/var/lib/netdata/www/$$D" >> $(CURDIR)/debian/netdata.conffiles; \
+	#done
+	#sed -i "/^#PERMS#/d" $(CURDIR)/debian/netdata.postinst
 
 override_dh_fixperms:
 	dh_fixperms
